@@ -1,3 +1,9 @@
+2012-12-10  Gustavo Noronha Silva  <gns@gnome.org>
+
+        Unreviewed distcheck fix.
+
+        * GNUmakefile.list.am:
+
 2012-12-10  Filip Pizlo  <fpizlo@apple.com>
 
         JSC profiling and debug dump code should use inferred names when possible
